# anitomy-ng

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmark.yml  ci.yml  nuget.yml  quality.yml  release.yml  wasm.yml  wheels.yml
anitomy/: Cargo.toml
anitomy-c/: Cargo.toml  README.md  build.rs  cbindgen.toml
anitomy-c/src/: lib.rs
anitomy-js/: Cargo.toml  LICENSE
anitomy-js/src/: lib.rs
anitomy-js/test/: smoke.cjs  types.test-d.ts
anitomy-py/: Cargo.toml  pyproject.toml
anitomy-py/python/anitomy_ng/: __init__.py  _anitomy.pyi
anitomy-py/src/: lib.rs
anitomy-py/tests/: test_conformance.py  test_together.py
anitomy/src/: element.rs  lib.rs  main.rs  options.rs
anitomy/src/detail/: bracket.rs  container.rs  delimiter.rs  element.rs  keyword.rs  mod.rs  parser.rs  regex_util.rs  token.rs  tokenizer.rs  util.rs
anitomy/src/detail/parser/: episode.rs  episode_title.rs  file_checksum.rs  file_extension.rs  keywords.rs  part.rs  release_group.rs  season.rs  title.rs  video_resolution.rs  volume.rs  year.rs
anitomy/src/together/: diff.rs  mod.rs  segment.rs
anitomy/tests/: conformance.rs  no_panic.rs  together.rs
anitomy/tests/fixtures/: anitomy_develop.json  anitomy_master.json  anitomy_ng.json  anitopy.json  self_rolled.json  together.json
anitomy/tests/known_failures/: README.md  anitomy_develop.txt  anitomy_master.txt  anitomy_ng.txt  anitopy.txt  together.txt
bindings/csharp/: README.md
bindings/csharp/AnitomyNg/: Anitomy.cs  AnitomyNg.csproj  Element.cs  ElementKind.cs  NativeMethods.cs  Options.cs
bindings/csharp/AnitomyNg.Tests/: AnitomyNg.Tests.csproj  AnitomyTests.cs
scripts/: benchmark.py  build-npm.sh  build_fixtures.py  refresh_conformance.py
scripts/adapters/: anitomy_develop.cpp  anitomy_master.cpp
scripts/adapters/anitomy_ng_wasm/: adapter.cjs
scripts/adapters/anitomysharp/: Program.cs  adapter.csproj
scripts/adapters/rapptz/: Cargo.toml
scripts/adapters/rapptz/src/: main.rs
scripts/adapters/yjl9903/: adapter.mjs  package-lock.json  package.json
scripts/bench/: Cargo.toml
scripts/bench/benches/: parse.rs
