[package]
name = "anitomy-ng"
description = "Anime video filename parser (Rust port of erengy/anitomy)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["anime", "parser", "filename", "anitomy"]
categories = ["parser-implementations"]

[dependencies]
# Pure Rust, no C deps, so wheel builds stay portable. Used for direct ports
# of upstream's std::regex patterns (episode/season/volume/resolution number
# matching); hand-rolled char-scanners caused transcription bugs.
# default-features off: every pattern uses ASCII classes ([0-9], [A-Za-z], ...)
# plus a few literal characters (第, 話, 期, ×) — no \d/\w/\p{}/(?i)/. that would
# need the Unicode tables. Dropping them shrinks the wasm build (and native
# binary) substantially; conformance is unchanged (tests/known_failures + the
# suites confirm it).
regex = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
